--- a/Script.conf
+++ b/Script.conf
@@ -1,85 +1,78 @@
 # Script
 
-# 京东比价
+# 京东比价-api.m.jd.com
 http-response ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js, tag=京东比价
 
-# 淘宝比价 (内置版)
+# 淘宝比价 (内置版)-trade-acs.m.taobao.com
 http-request ^http://.+/amdc/mobileDispatch requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js, tag=淘宝比价1 (内置版)
 http-response ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js, tag=淘宝比价2 (内置版)
 
-# 淘宝比价 (通知版)
+# 淘宝比价 (通知版)-trade-acs.m.taobao.com
 http-request ^http://.+/amdc/mobileDispatch requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price_lite.js, tag=淘宝比价1 (通知版)
 http-response ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price_lite.js, tag=淘宝比价2 (通知版)
 
-# 微博去广告
+# 微博去广告-api.weibo.cn,mapi.weibo.com,*.uve.weibo.com
 http-response ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js, tag=微博去广告
 http-response ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info) requires-body=1,max-size=-1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js, , tag=微博去广告
 
-# WeChat
-http-request ^https://mp\.weixin\.qq\.com/mp/getappmsgad script-path=https://raw.githubusercontent.com/yezhigang/Script/main/WeChat.js, tag=WeChat
+# WeChat-mp.weixin.qq.com
+http-request ^https://mp\.weixin\.qq\.com/mp/getappmsgad script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/WeChat.js, tag=WeChat
 
-# QQNews
-http-response ^https://r\.inews\.qq.com\/get(QQNewsUnreadList|RecommendList) requires-body=1,max-size=-1,script-path= https://raw.githubusercontent.com/yezhigang/Script/main/QQNews.js, tag=QQNews
+# QQNews-r.inews.qq.com
+http-response ^https://r\.inews\.qq.com\/get(QQNewsUnreadList|RecommendList) requires-body=1,max-size=-1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/QQNews.js, tag=QQNews
 
-# 微信中打开淘宝等被屏蔽链接
-http-response ^https?:\/\/weixin110\.qq\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/weixin110.js, tag=微信打开淘宝链接
+# 微信中打开淘宝等被屏蔽链接-weixin110.qq.com
+http-response ^https?:\/\/weixin110\.qq\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/weixin110.js, tag=微信打开淘宝链接
 
-# －－－－－－－－－－－－
+# 百度搜索去广告-*.baidu.com
+^https?:\/\/.*\.baidu\.com url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
 
-# WPS
-http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/wps.js, tag=WPS
+# vip ↓
 
-# 万年历
-http-response https://r.51wnl-cq.com/Api/User/GetExtInfo requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/wnl.js, tag=万年历
+# WPS-account.wps.*
+http-response ^https://account.wps.*/api/users/ requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/wps.js, tag=WPS
 
-# 彩云天气
-http-response https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/caiyun.js, tag=彩云天气
+# 万年历-r.51wnl-cq.com
+http-response https://r.51wnl-cq.com/Api/User/GetExtInfo requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/wnl.js, tag=万年历
 
-# 美图秀秀
-http-response ^https:\/\/api\.xiuxiu\.meitu\.com\/v1\/user\/show\.json requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/mtxx.js, tag=美图秀秀
+# 百度网盘-pan.baidu.com
+http-response https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/BaiduCloud.js, tag=百度网盘
 
-# 美颜相机
-http-response https://api.meiyan.com/iap/verify.json requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/myxj.js, tag=美颜相机
+# 彩云天气-biz.caiyunapp.com
+http-response https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/caiyun.js, tag=彩云天气
 
-# 菜谱大全
-http-response https?:\/\/apiios_dq\.xiangha\.com requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/cpdq.js, tag=菜谱大全
+# 美图秀秀-api.xiuxiu.meitu.com
+http-response ^https:\/\/api\.xiuxiu\.meitu\.com\/v1\/user\/show\.json requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/mtxx.js, tag=美图秀秀
 
-# 贝瓦儿歌
-http-response http:\/\/passport\.beva\.com\/passport\/v1\/sdk\/getuserinfo requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/bweg.js, tag=贝瓦儿歌
+# 美颜相机-api.meiyan.com
+http-response https://api.meiyan.com/iap/verify.json requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/myxj.js, tag=美颜相机
 
-# 伴鱼绘本
-http-response https://picturebook.ipalfish.com/pfapi(/profile/picturebook/get|/base/growthsystem/user/vip/equity/get) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/byhb.js, tag=伴鱼绘本
+# 菜谱大全-apiios_dq.xiangha.com
+http-response https?:\/\/apiios_dq\.xiangha\.com requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/cpdq.js, tag=菜谱大全
 
-# 闪电下载
-http-response ^http\:\/\/app\.flashdown365\.com\/ios\/login script-path=https://raw.githubusercontent.com/yezhigang/Script/main/sdxz.js, requires-body=true, timeout=10, tag=闪电下载
+# 贝瓦儿歌-passport.beva.com
+http-response http:\/\/passport\.beva\.com\/passport\/v1\/sdk\/getuserinfo requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/bweg.js, tag=贝瓦儿歌
 
-# 酷我音乐
-http-response ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) requires-body=1,max-size=0,script-path= https://raw.githubusercontent.com/yezhigang/Script/main/kuwo.js, tag=酷我音乐
-http-request ^https?:\/\/musicpay\.kuwo.cn\/music\.pay\?uid=\d+ script-path= https://raw.githubusercontent.com/yezhigang/Script/main/kuwomusicdownload.js, tag=酷我音乐
+# 伴鱼绘本-picturebook.ipalfish.com
+http-response https://picturebook.ipalfish.com/pfapi(/profile/picturebook/get|/base/growthsystem/user/vip/equity/get) requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/byhb.js, tag=伴鱼绘本
 
-# Document
-http-response https:\/\/license\.pdfexpert\.com\/api\/.+\/subscription\/(refresh$|check$) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/documents.js, tag=Document
+# 闪电下载-app.flashdown365.com
+http-response ^http\:\/\/app\.flashdown365\.com\/ios\/login script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/sdxz.js, requires-body=true, timeout=10, tag=闪电下载
 
-# 海豚记账本
-http-response https:\/\/book\.haitunwallet\.com\/app\/vip\/status requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/htjz.js, tag=海豚记账本
+# 酷我音乐-vip1.kuwo.cn
+http-response ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) requires-body=1,max-size=0,script-path= https://raw.githubusercontent.com/Game-2020/Scripts/main/kuwo.js, tag=酷我音乐
+http-request ^https?:\/\/musicpay\.kuwo.cn\/music\.pay\?uid=\d+ script-path= https://raw.githubusercontent.com/Game-2020/Scripts/main/kuwomusicdownload.js, tag=酷我音乐
 
-# 手机硬件管家
-http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\/(downloadwallpaper|getuser) requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/sjyjgj.js, tag=手机硬件管家
+# Documentt-license.pdfexpert.com
+http-response https:\/\/license\.pdfexpert\.com\/api\/.+\/subscription\/(refresh$|check$) requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/documents.js, tag=Document
 
+# 海豚记账本-book.haitunwallet.com
+http-response https:\/\/book\.haitunwallet\.com\/app\/vip\/status requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/htjz.js, tag=海豚记账本
 
-# buy itunes apple com
+# 手机硬件管家-api.591master.com
+http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\/(downloadwallpaper|getuser) requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/sjyjgj.js, tag=手机硬件管家
 
-# Unlock （剪影.RCam.Picsew.Gear.Geist.VCUS）
-#http-response ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/receipt.js, tag=buy itunes apple com
+# CS扫描全能王-ap*.intsig.net
+http-response ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js, tag=CS扫描全能王
 
-# Gear
-#http-response ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/gear.js, tag=Gear
-
-# Piesew
-#http-response https:\/\/buy\.itunes\.apple\.com\/verifyReceipt script-path=https://raw.githubusercontent.com/yezhigang/Script/main/picsew.js, requires-body=true, timeout=10, tag=Piesew
-
-# CPU Dasher
-#http-esponse ^https:\/\/p.+-buy\.itunes\.apple\.com\/WebObjects\/MZFinance.woa\/wa\/inAppRegrantPurchaseHistory requires-body=1,script-path=https://raw.githubusercontent.com/yezhigang/Script/main/cpudasher.js, tag=CPU Dasher
-
-
-hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, weixin110.qq.com, account.wps.cn, r.51wnl-cq.com, biz.caiyunapp.com, api.xiuxiu.meitu.com, api.meiyan.com, apiios_dq.xiangha.com, passport.beva.com, picturebook.ipalfish.com, app.flashdown365.com, vip1.kuwo.cn, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, 
+hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, weixin110.qq.com, *.baidu.com, account.wps.cn, r.51wnl-cq.com, pan.baidu.com, biz.caiyunapp.com, api.xiuxiu.meitu.com, api.meiyan.com, apiios_dq.xiangha.com, passport.beva.com, picturebook.ipalfish.com, app.flashdown365.com, vip1.kuwo.cn, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, ap*.intsig.net
