--- a/Script.conf
+++ b/Script.conf
@@ -1,15 +1,18 @@
 # Script
 
-# 京东比价-api.m.jd.com
-http-response ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js, tag=京东比价
+# 京东比价 (内置版)-api.m.jd.com
+http-response ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js, tag=京东比价 (内置版)
+
+# 京东比价 (通知版)-api.m.jd.com
+http-response ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js_lite, tag=京东比价 (通知版)
 
 # 淘宝比价 (内置版)-trade-acs.m.taobao.com
-http-request ^http://.+/amdc/mobileDispatch requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js, tag=淘宝比价1 (内置版)
-http-response ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js, tag=淘宝比价2 (内置版)
+http-request ^http://.+/amdc/mobileDispatch requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js, tag=淘宝比价 (内置版)
+http-response ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js, tag=淘宝比价 (内置版)
 
 # 淘宝比价 (通知版)-trade-acs.m.taobao.com
-http-request ^http://.+/amdc/mobileDispatch requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price_lite.js, tag=淘宝比价1 (通知版)
-http-response ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price_lite.js, tag=淘宝比价2 (通知版)
+http-request ^http://.+/amdc/mobileDispatch requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price_lite.js, tag=淘宝比价 (通知版)
+http-response ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price_lite.js, tag=淘宝比价 (通知版)
 
 # 微博去广告-api.weibo.cn,mapi.weibo.com,*.uve.weibo.com
 http-response ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js, tag=微博去广告
@@ -23,9 +26,6 @@ http-response ^https://r\.inews\.qq.com\/get(QQNewsUnreadList|RecommendList) req
 
 # 微信中打开淘宝等被屏蔽链接-weixin110.qq.com
 http-response ^https?:\/\/weixin110\.qq\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi requires-body=1,script-path=https://raw.githubusercontent.com/Game-2020/Scripts/main/weixin110.js, tag=微信打开淘宝链接
-
-# 百度搜索去广告-*.baidu.com
-^https?:\/\/.*\.baidu\.com url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
 
 # vip ↓
 
@@ -75,4 +75,4 @@ http-response http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\
 # CS扫描全能王-ap*.intsig.net
 http-response ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? requires-body=1,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js, tag=CS扫描全能王
 
-hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, weixin110.qq.com, *.baidu.com, account.wps.cn, r.51wnl-cq.com, pan.baidu.com, biz.caiyunapp.com, api.xiuxiu.meitu.com, api.meiyan.com, apiios_dq.xiangha.com, passport.beva.com, picturebook.ipalfish.com, app.flashdown365.com, vip1.kuwo.cn, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, ap*.intsig.net
+hostname = api.m.jd.com, trade-acs.m.taobao.com, api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, mp.weixin.qq.com, r.inews.qq.com, weixin110.qq.com, account.wps.cn, r.51wnl-cq.com, pan.baidu.com, biz.caiyunapp.com, api.xiuxiu.meitu.com, api.meiyan.com, apiios_dq.xiangha.com, passport.beva.com, picturebook.ipalfish.com, app.flashdown365.com, vip1.kuwo.cn, license.pdfexpert.com, book.haitunwallet.com, api.591master.com, ap*.intsig.net
