--- a/Cookie.conf
+++ b/Cookie.conf
@@ -1,6 +1,7 @@
-hostname = api.m.jd.com, tieba.baidu.com, 
+hostname = api-dd.jd.com, api.m.jd.com, tieba.baidu.com
 
 
+http-request ^https:\/\/api\-dd\.jd\.com\/client\.action\?functionId=getSessionLog script-path=https://raw.githubusercontent.com/LJMX996/jd/aaron/utils/get_jd_wskey.js, requires-body=true, timeout=10, tag=京东wskey, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png
 
 http-request ^https:\/\/(api\.m|me-api|ms\.jr)\.jd\.com\/(client\.action\?functionId=signBean|user_new\/info\/GetJDUserInfoUnion\?|gw\/generic\/hy\/h5\/m\/appSign\?) script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, requires-body=true, timeout=10, enabled=false, tag=京东(NobyDa), img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png
 
