--- a/Task.conf
+++ b/Task.conf
@@ -1,10 +1,7 @@
-cron "0 0,1,2 8 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/BDTieBa-DailyBonus/TieBa.js, enabled=false, tag=百度贴吧, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/tieba.png
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.js, timeout=300, tag=贴吧签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/tieba.png
 
-cron "40 3 8 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/ximalaya/ximalaya.js, enabled=false, tag=喜马拉雅, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/ximalaya.png
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/githubdulong/Script/master/weifeng.js, timeout=300, tag=威锋签到, img-url=https://raw.githubusercontent.com/anker1209/icon/main/wflt.png
 
-cron "0 7 * * *" script-path=https://raw.githubusercontent.com/ChuheGit/1/main/Script/jd_scripts/jd_speed_sign.js, enabled=false, tag=京东极速版, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/lowking/Scripts/master/ali/aliYunPanCheckIn.js, timeout=300, tag=阿里云盘签到, img-url=https://raw.githubusercontent.com/lowking/Scripts/master/doc/icon/aliYunPan.png
 
-cron "2 9 * * *" script-path=https://raw.githubusercontent.com/ChuheGit/1/main/Script/jd_scripts/jd_bean_change.js, enabled=false, tag=京东资产变动通知, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png
-
-cron "55 23 * * *" script-path=https://raw.githubusercontent.com/ChuheGit/1/main/Script/jd_scripts/jd_unsubscribe.js, enabled=false, tag=取关京东店铺商品, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png
-
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/xmlySign.js, timeout=300, tag=喜马拉雅签到, img-url=https://raw.githubusercontent.com/HuiDoY/Icon/main/mini/Color/ximalaya.png
