--- a/Cookie.conf
+++ b/Cookie.conf
@@ -1,12 +1,7 @@
-hostname = api-dd.jd.com, api.m.jd.com, tieba.baidu.com
+hostname = tieba.baidu.com, auth.aliyundrive.com, *.ximalaya.com
 
+http-request ^https?:\/\/tieba\.baidu\.com\/?.? script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.cookie.js, timeout=10, tag=贴吧Cookie, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/tieba.png
 
-http-request ^https:\/\/api\-dd\.jd\.com\/client\.action\?functionId=getSessionLog script-path=https://raw.githubusercontent.com/LJMX996/jd/aaron/utils/get_jd_wskey.js, requires-body=false, timeout=10, tag=京东wskey, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png
+http-response ^https:\/\/auth\.aliyundrive.com\/v2\/account\/token script-path=https://raw.githubusercontent.com/lowking/Scripts/master/ali/aliYunPanCheckIn.js, requires-body=true, timeout=10, tag=阿里云盘签到cookie, img-url=https://raw.githubusercontent.com/lowking/Scripts/master/doc/icon/aliYunPan.png
 
-http-request ^https:\/\/(api\.m|me-api|ms\.jr)\.jd\.com\/(client\.action\?functionId=signBean|user_new\/info\/GetJDUserInfoUnion\?|gw\/generic\/hy\/h5\/m\/appSign\?) script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, requires-body=false, timeout=10, enabled=false, tag=京东(NobyDa), img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png
-
-http-request https:\/\/wq\.jd\.com\/user_new\/info\/GetJDUserInfoUnion script-path=https://raw.githubusercontent.com/dompling/Script/master/jd/JD_extra_cookie.js, timeout=10, enabled=false, tag=京东(2Ya), img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png
-
-http-request ^https?:\/\/tieba\.baidu\.com\/?.? script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.cookie.js, timeout=10, enabled=false, tag=贴吧, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/tieba.png
-
-http-request ^https?:\/\/.*\/mobile\-user\/v2\/homePage\/.* script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/ximalaya/ximalaya.cookie.js, timeout=10, enabled=false, tag=喜马拉雅, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/ximalaya.png
+http-request ^https?:\/\/(mobile|mobilehera|mobwsa)\.ximalaya\.com\/app-skin-service\/skin\/ script-path=https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/xmlySign.js, timeout=10, tag=喜马拉雅Cookie, img-url=https://raw.githubusercontent.com/HuiDoY/Icon/main/mini/Color/ximalaya.png
