--- a/Task.conf
+++ b/Task.conf
@@ -1,7 +1,11 @@
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.js, timeout=300, tag=贴吧签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/tieba.png
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.js, timeout=60, tag=贴吧签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/tieba.png
 
-cron "5 0 * * *" script-path=https://raw.githubusercontent.com/githubdulong/Script/master/weifeng.js, timeout=300, tag=威锋签到, img-url=https://raw.githubusercontent.com/anker1209/icon/main/wflt.png
+cron "2 0 * * *" script-path=https://raw.githubusercontent.com/githubdulong/Script/master/weifeng.js, timeout=60, tag=威锋签到, img-url=https://raw.githubusercontent.com/anker1209/icon/main/wflt.png
 
-cron "5 0 * * *" script-path=https://raw.githubusercontent.com/lowking/Scripts/master/ali/aliYunPanCheckIn.js, timeout=300, tag=阿里云盘签到, img-url=https://raw.githubusercontent.com/lowking/Scripts/master/doc/icon/aliYunPan.png
+cron "3 0 * * *" script-path=https://raw.githubusercontent.com/lowking/Scripts/master/ali/aliYunPanCheckIn.js, timeout=60, tag=阿里云盘签到, img-url=https://raw.githubusercontent.com/lowking/Scripts/master/doc/icon/aliYunPan.png
 
-cron "5 0 * * *" script-path=https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/xmlySign.js, timeout=300, tag=喜马拉雅签到, img-url=https://raw.githubusercontent.com/HuiDoY/Icon/main/mini/Color/ximalaya.png
+cron "3 0 * * *" script-path=https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/xmlySign.js, timeout=60, tag=喜马拉雅签到, img-url=https://raw.githubusercontent.com/HuiDoY/Icon/main/mini/Color/ximalaya.png
+
+cron "00 12 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/backup.js, timeout=60, tag=BoxJs备份, img-url=https://raw.githubusercontent.com/chavyleung/scripts/master/box/icons/BoxJs.png
+
+cron "00 12 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/restore.js, timeout=60, tag=BoxJs恢复, img-url=https://raw.githubusercontent.com/chavyleung/scripts/master/box/icons/BoxJs.png
