--- a/Task.conf
+++ b/Task.conf
@@ -2,7 +2,7 @@ cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/script
 
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/githubdulong/Script/master/weifeng.js, timeout=60, tag=威锋签到, img-url=https://raw.githubusercontent.com/anker1209/icon/main/wflt.png
 
-cron "3 0 * * *" script-path=https://raw.githubusercontent.com/lowking/Scripts/master/ali/aliYunPanCheckIn.js, timeout=60, tag=阿里云盘签到, img-url=https://raw.githubusercontent.com/lowking/Scripts/master/doc/icon/aliYunPan.png
+cron "3 0 * * *" script-path=https://gist.githubusercontent.com/Sliverkiss/33800a98dcd029ba09f8b6fc6f0f5162/raw/aliyun.js, timeout=60, tag=阿里云盘签到, img-url=https://raw.githubusercontent.com/lowking/Scripts/master/doc/icon/aliYunPan.png
 
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/xmlySign.js, timeout=60, tag=喜马拉雅签到, img-url=https://raw.githubusercontent.com/HuiDoY/Icon/main/mini/Color/ximalaya.png
 
