--- a/Cookie.conf
+++ b/Cookie.conf
@@ -5,3 +5,5 @@ http-request ^https?:\/\/tieba\.baidu\.com\/?.? script-path=https://raw.githubus
 http-request ^https:\/\/(auth|aliyundrive)\.alipan\.com\/v2\/account\/token script-path=https://raw.githubusercontent.com/zqzess/rule_for_quantumultX/master/js/Mine/aDriveCheckIn/aDriveCheckIn.js, requires-body=true, timeout=10, tag=阿里云盘cookie, img-url=https://raw.githubusercontent.com/lowking/Scripts/master/doc/icon/aliYunPan.png
 
 http-request ^https?:\/\/(mobile|mobilehera|mobwsa)\.ximalaya\.com\/app-skin-service\/skin\/ script-path=https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/xmlySign.js, timeout=10, tag=喜马拉雅Cookie, img-url=https://raw.githubusercontent.com/HuiDoY/Icon/main/mini/Color/ximalaya.png
+
+http-request ^https:\/\/interface\.music\.163\.com\/weapi\/nmusician\/ script-path = https://raw.githubusercontent.com/leiyiyan/resource/main/script/netease_musician/cookie.js, tag = 音乐人Cookie, img-url=https://gitlab.com/lodepuly/iconlibrary/-/raw/main/App_icon/120px/NeteaseCloudMusic.png
