--- a/Cookie.conf
+++ b/Cookie.conf
@@ -1,4 +1,4 @@
-hostname = tieba.baidu.com, auth.alipan.com,auth.aliyundrive.com, *.ximalaya.com
+hostname = tieba.baidu.com, auth.alipan.com,auth.aliyundrive.com, *.ximalaya.com, interface.music.163.com
 
 http-request ^https?:\/\/tieba\.baidu\.com\/?.? script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.cookie.js, timeout=10, tag=贴吧Cookie, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/tieba.png
 
