--- a/Cookie.conf
+++ b/Cookie.conf
@@ -1,4 +1,8 @@
-hostname = tieba.baidu.com, auth.alipan.com,auth.aliyundrive.com, *.ximalaya.com, interface.music.163.com
+hostname = payapp.weixin.qq.com, tieba.baidu.com, auth.alipan.com,auth.aliyundrive.com, *.ximalaya.com, interface.music.163.com
+
+
+
+http-response https:\/\/payapp\.weixin\.qq\.com\/coupon-center-user\/home\/login tag=微付金币²,script-path=https://raw.githubusercontent.com/FoKit/Scripts/main/scripts/wechat_pay_coupon.js,requires-body=1
 
 http-request ^https?:\/\/tieba\.baidu\.com\/?.? script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.cookie.js, timeout=10, tag=贴吧Cookie, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/tieba.png
 
