--- a/Task.conf
+++ b/Task.conf
@@ -1,3 +1,5 @@
+cron "30 23 * * *" script-path=https://raw.githubusercontent.com/FoKit/Scripts/main/scripts/wechat_pay_coupon.js,tag=微付金币,enable=true
+
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.js, timeout=60, tag=贴吧签到, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/tieba.png
 
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/githubdulong/Script/master/weifeng.js, timeout=60, tag=威锋签到, img-url=https://raw.githubusercontent.com/anker1209/icon/main/wflt.png
