--- a/Task.conf
+++ b/Task.conf
@@ -2,9 +2,11 @@ cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/script
 
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/githubdulong/Script/master/weifeng.js, timeout=60, tag=威锋, img-url=https://raw.githubusercontent.com/anker1209/icon/main/wflt.png
 
+cron "3 0 * * *" script-path=https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/xmlySign.js, timeout=60, tag=喜马拉雅, img-url=https://raw.githubusercontent.com/HuiDoY/Icon/main/mini/Color/ximalaya.png
+
 cron "3 0 * * *" script-path=https://gist.githubusercontent.com/Sliverkiss/33800a98dcd029ba09f8b6fc6f0f5162/raw/aliyun.js, timeout=60, tag=阿里云盘, img-url=https://raw.githubusercontent.com/lowking/Scripts/master/doc/icon/aliYunPan.png
 
-cron "3 0 * * *" script-path=https://raw.githubusercontent.com/ClydeTime/Quantumult/main/Script/Task/xmlySign.js, timeout=60, tag=喜马拉雅, img-url=https://raw.githubusercontent.com/HuiDoY/Icon/main/mini/Color/ximalaya.png
+cron "3 0 * * *" script-path=https://gist.githubusercontent.com/Sliverkiss/1589f69e675019b0b685a57a89de9ea5/raw/quarkV2.js, timeout=60, tag=夸克网盘, img-url=https://raw.githubusercontent.com/Game-2020/icon/main/quark.png
 
 cron "30 23 * * *" script-path=https://raw.githubusercontent.com/FoKit/Scripts/main/scripts/wechat_pay_coupon.js, timeout=60, tag=微付金币, img-url=https://raw.githubusercontent.com/FoKit/Scripts/main/images/wechat_pay_coupon.png
 
