--- a/Cookie.conf
+++ b/Cookie.conf
@@ -1,10 +1,8 @@
+[MITM]
 hostname = payapp.weixin.qq.com, tieba.baidu.com, auth.alipan.com,auth.aliyundrive.com, *.ximalaya.com
 
 
-
-
-http-response https:\/\/payapp\.weixin\.qq\.com\/coupon-center-user\/home\/login tag=微付金币²,script-path=https://raw.githubusercontent.com/FoKit/Scripts/main/scripts/wechat_pay_coupon.js,requires-body=1,  img-url=https://raw.githubusercontent.com/FoKit/Scripts/main/images/wechat_pay_coupon.png
-
+[Script]
 http-request ^https?:\/\/tieba\.baidu\.com\/?.? script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.cookie.js, timeout=10, tag=贴吧, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/tieba.png
 
 http-request ^https:\/\/(auth|aliyundrive)\.alipan\.com\/v2\/account\/token script-path=https://gist.githubusercontent.com/Sliverkiss/33800a98dcd029ba09f8b6fc6f0f5162/raw/aliyun.js, requires-body=true, timeout=10, tag=阿里云盘, img-url=https://raw.githubusercontent.com/lowking/Scripts/master/doc/icon/aliYunPan.png
