--- a/Cron.conf
+++ b/Cron.conf
@@ -1,3 +1,4 @@
+[Script]
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/tieba/tieba.js, timeout=60, tag=贴吧, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/tieba.png
 
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/githubdulong/Script/master/weifeng.js, timeout=60, tag=威锋, img-url=https://raw.githubusercontent.com/anker1209/icon/main/wflt.png
@@ -9,8 +10,6 @@ cron "3 0 * * *" script-path=https://gist.githubusercontent.com/Sliverkiss/33800
 cron "3 0 * * *" script-path=https://gist.githubusercontent.com/Sliverkiss/1589f69e675019b0b685a57a89de9ea5/raw/quarkV2.js, timeout=60, tag=夸克网盘, img-url=https://raw.githubusercontent.com/Game-2020/icon/main/quark.png
 
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/WowYiJiu/Personal/main/Script/tenvideo.js, timeout=120, tag=腾讯视频, img-url=https://github.com/WowYiJiu/Personal/blob/main/icon/Color/tenvideo.png?raw=true
-
-cron "30 23 * * *" script-path=https://raw.githubusercontent.com/FoKit/Scripts/main/scripts/wechat_pay_coupon.js, timeout=60, tag=微付金币, img-url=https://raw.githubusercontent.com/FoKit/Scripts/main/images/wechat_pay_coupon.png
 
 
 
