--- a/Cron.conf
+++ b/Cron.conf
@@ -9,7 +9,7 @@ cron "3 0 * * *" script-path=https://gist.githubusercontent.com/Sliverkiss/33800
 
 cron "3 0 * * *" script-path=https://gist.githubusercontent.com/Sliverkiss/1589f69e675019b0b685a57a89de9ea5/raw/quarkV2.js, timeout=60, tag=夸克网盘, img-url=https://gitlab.com/lodepuly/iconlibrary/-/raw/main/App_icon/120px/QuarkBrowser.png
 
-cron "3 0 * * *" script-path=https://raw.githubusercontent.com/WowYiJiu/Personal/main/Script/tenvideo.js, timeout=120, tag=腾讯视频, img-url=https://github.com/WowYiJiu/Personal/blob/main/icon/Color/tenvideo.png
+cron "3 0 * * *" script-path=https://raw.githubusercontent.com/WowYiJiu/Personal/main/Script/tenvideo.js, timeout=120, tag=腾讯视频, img-url=https://gitlab.com/lodepuly/iconlibrary/-/raw/main/App_icon/120px/Tencent_Video.png
 
 cron "10 0 * * *" script-path=https://gist.githubusercontent.com/Alex0510/1c389019c264a7d3ddbe4dbcf77d4295/raw/kugou_auto.js, tag=酷狗音乐概念版, img-url=https://gitlab.com/lodepuly/iconlibrary/-/raw/main/App_icon/120px/KuGou.png
 
