--- a/Cron.conf
+++ b/Cron.conf
@@ -13,6 +13,8 @@ cron "3 0,12 * * *" script-path=https://raw.githubusercontent.com/WowYiJiu/Perso
 
 cron "4 0,12 * * *" script-path=https://gist.githubusercontent.com/Alex0510/1c389019c264a7d3ddbe4dbcf77d4295/raw/kugou_auto.js, tag=酷狗音乐概念版, img-url=https://gitlab.com/lodepuly/iconlibrary/-/raw/main/App_icon/120px/KuGou.png
 
+cron "4 0,12 * * *" script-path=https://raw.githubusercontent.com/wf021325/qx/master/task/wps.js, tag=WPS_PC, img-url=https://gitlab.com/lodepuly/iconlibrary/-/raw/main/App_icon/120px/WPS.png
+
 
 
 
